components/script/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE

Grammar

Rule 0     S' -> Definitions
Rule 1     Definitions -> ExtendedAttributeList Definition Definitions
Rule 2     Definitions -> <empty>
Rule 3     Definition -> CallbackOrInterface
Rule 4     Definition -> PartialInterface
Rule 5     Definition -> Dictionary
Rule 6     Definition -> Exception
Rule 7     Definition -> Enum
Rule 8     Definition -> Typedef
Rule 9     Definition -> ImplementsStatement
Rule 10    CallbackOrInterface -> CALLBACK CallbackRestOrInterface
Rule 11    CallbackOrInterface -> Interface
Rule 12    CallbackRestOrInterface -> CallbackRest
Rule 13    CallbackRestOrInterface -> Interface
Rule 14    Interface -> INTERFACE IDENTIFIER Inheritance LBRACE InterfaceMembers RBRACE SEMICOLON
Rule 15    Interface -> INTERFACE IDENTIFIER SEMICOLON
Rule 16    PartialInterface -> PARTIAL INTERFACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON
Rule 17    Inheritance -> COLON ScopedName
Rule 18    Inheritance -> <empty>
Rule 19    InterfaceMembers -> ExtendedAttributeList InterfaceMember InterfaceMembers
Rule 20    InterfaceMembers -> <empty>
Rule 21    InterfaceMember -> Const
Rule 22    InterfaceMember -> AttributeOrOperationOrMaplikeOrSetlikeOrIterable
Rule 23    Dictionary -> DICTIONARY IDENTIFIER Inheritance LBRACE DictionaryMembers RBRACE SEMICOLON
Rule 24    DictionaryMembers -> ExtendedAttributeList DictionaryMember DictionaryMembers
Rule 25    DictionaryMembers -> <empty>
Rule 26    DictionaryMember -> Required Type IDENTIFIER Default SEMICOLON
Rule 27    Default -> EQUALS DefaultValue
Rule 28    Default -> <empty>
Rule 29    DefaultValue -> ConstValue
Rule 30    DefaultValue -> LBRACKET RBRACKET
Rule 31    Exception -> EXCEPTION IDENTIFIER Inheritance LBRACE ExceptionMembers RBRACE SEMICOLON
Rule 32    Enum -> ENUM IDENTIFIER LBRACE EnumValueList RBRACE SEMICOLON
Rule 33    EnumValueList -> STRING EnumValueListComma
Rule 34    EnumValueListComma -> COMMA EnumValueListString
Rule 35    EnumValueListComma -> <empty>
Rule 36    EnumValueListString -> STRING EnumValueListComma
Rule 37    EnumValueListString -> <empty>
Rule 38    CallbackRest -> IDENTIFIER EQUALS ReturnType LPAREN ArgumentList RPAREN SEMICOLON
Rule 39    ExceptionMembers -> ExtendedAttributeList ExceptionMember ExceptionMembers
Rule 40    ExceptionMembers -> <empty>
Rule 41    Typedef -> TYPEDEF Type IDENTIFIER SEMICOLON
Rule 42    ImplementsStatement -> ScopedName IMPLEMENTS ScopedName SEMICOLON
Rule 43    Const -> CONST ConstType IDENTIFIER EQUALS ConstValue SEMICOLON
Rule 44    ConstValue -> BooleanLiteral
Rule 45    ConstValue -> INTEGER
Rule 46    ConstValue -> FLOATLITERAL
Rule 47    ConstValue -> STRING
Rule 48    ConstValue -> NULL
Rule 49    BooleanLiteral -> TRUE
Rule 50    BooleanLiteral -> FALSE
Rule 51    AttributeOrOperationOrMaplikeOrSetlikeOrIterable -> Attribute
Rule 52    AttributeOrOperationOrMaplikeOrSetlikeOrIterable -> Maplike
Rule 53    AttributeOrOperationOrMaplikeOrSetlikeOrIterable -> Setlike
Rule 54    AttributeOrOperationOrMaplikeOrSetlikeOrIterable -> Iterable
Rule 55    AttributeOrOperationOrMaplikeOrSetlikeOrIterable -> Operation
Rule 56    Iterable -> ITERABLE LT Type GT SEMICOLON
Rule 57    Iterable -> ITERABLE LT Type COMMA Type GT SEMICOLON
Rule 58    Setlike -> ReadOnly SETLIKE LT Type GT SEMICOLON
Rule 59    Maplike -> ReadOnly MAPLIKE LT Type COMMA Type GT SEMICOLON
Rule 60    Attribute -> Qualifier AttributeRest
Rule 61    Attribute -> INHERIT AttributeRest
Rule 62    Attribute -> AttributeRest
Rule 63    AttributeRest -> ReadOnly ATTRIBUTE Type AttributeName SEMICOLON
Rule 64    ReadOnly -> READONLY
Rule 65    ReadOnly -> <empty>
Rule 66    Operation -> Qualifiers OperationRest
Rule 67    Operation -> STRINGIFIER SEMICOLON
Rule 68    Operation -> JSONIFIER SEMICOLON
Rule 69    Qualifier -> STATIC
Rule 70    Qualifier -> STRINGIFIER
Rule 71    Qualifiers -> Qualifier
Rule 72    Qualifiers -> Specials
Rule 73    Specials -> Special Specials
Rule 74    Specials -> <empty>
Rule 75    Special -> GETTER
Rule 76    Special -> SETTER
Rule 77    Special -> CREATOR
Rule 78    Special -> DELETER
Rule 79    Special -> LEGACYCALLER
Rule 80    OperationRest -> ReturnType OptionalIdentifier LPAREN ArgumentList RPAREN SEMICOLON
Rule 81    OptionalIdentifier -> IDENTIFIER
Rule 82    OptionalIdentifier -> <empty>
Rule 83    ArgumentList -> Argument Arguments
Rule 84    ArgumentList -> <empty>
Rule 85    Arguments -> COMMA Argument Arguments
Rule 86    Arguments -> <empty>
Rule 87    Argument -> ExtendedAttributeList Optional Type Ellipsis ArgumentName Default
Rule 88    ArgumentName -> IDENTIFIER
Rule 89    ArgumentName -> ATTRIBUTE
Rule 90    ArgumentName -> CALLBACK
Rule 91    ArgumentName -> CONST
Rule 92    ArgumentName -> CREATOR
Rule 93    ArgumentName -> DELETER
Rule 94    ArgumentName -> DICTIONARY
Rule 95    ArgumentName -> ENUM
Rule 96    ArgumentName -> EXCEPTION
Rule 97    ArgumentName -> GETTER
Rule 98    ArgumentName -> IMPLEMENTS
Rule 99    ArgumentName -> INHERIT
Rule 100   ArgumentName -> INTERFACE
Rule 101   ArgumentName -> ITERABLE
Rule 102   ArgumentName -> LEGACYCALLER
Rule 103   ArgumentName -> MAPLIKE
Rule 104   ArgumentName -> PARTIAL
Rule 105   ArgumentName -> REQUIRED
Rule 106   ArgumentName -> SERIALIZER
Rule 107   ArgumentName -> SETLIKE
Rule 108   ArgumentName -> SETTER
Rule 109   ArgumentName -> STATIC
Rule 110   ArgumentName -> STRINGIFIER
Rule 111   ArgumentName -> JSONIFIER
Rule 112   ArgumentName -> TYPEDEF
Rule 113   ArgumentName -> UNRESTRICTED
Rule 114   AttributeName -> IDENTIFIER
Rule 115   AttributeName -> REQUIRED
Rule 116   Optional -> OPTIONAL
Rule 117   Optional -> <empty>
Rule 118   Required -> REQUIRED
Rule 119   Required -> <empty>
Rule 120   Ellipsis -> ELLIPSIS
Rule 121   Ellipsis -> <empty>
Rule 122   ExceptionMember -> Const
Rule 123   ExceptionMember -> ExceptionField
Rule 124   ExceptionField -> Type IDENTIFIER SEMICOLON
Rule 125   ExtendedAttributeList -> LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
Rule 126   ExtendedAttributeList -> <empty>
Rule 127   ExtendedAttribute -> ExtendedAttributeNoArgs
Rule 128   ExtendedAttribute -> ExtendedAttributeArgList
Rule 129   ExtendedAttribute -> ExtendedAttributeIdent
Rule 130   ExtendedAttribute -> ExtendedAttributeNamedArgList
Rule 131   ExtendedAttribute -> ExtendedAttributeIdentList
Rule 132   ExtendedAttribute -> <empty>
Rule 133   ExtendedAttributes -> COMMA ExtendedAttribute ExtendedAttributes
Rule 134   ExtendedAttributes -> <empty>
Rule 135   Other -> INTEGER
Rule 136   Other -> FLOATLITERAL
Rule 137   Other -> IDENTIFIER
Rule 138   Other -> STRING
Rule 139   Other -> OTHER
Rule 140   Other -> ELLIPSIS
Rule 141   Other -> COLON
Rule 142   Other -> SCOPE
Rule 143   Other -> SEMICOLON
Rule 144   Other -> LT
Rule 145   Other -> EQUALS
Rule 146   Other -> GT
Rule 147   Other -> QUESTIONMARK
Rule 148   Other -> DATE
Rule 149   Other -> DOMSTRING
Rule 150   Other -> BYTESTRING
Rule 151   Other -> USVSTRING
Rule 152   Other -> ANY
Rule 153   Other -> ATTRIBUTE
Rule 154   Other -> BOOLEAN
Rule 155   Other -> BYTE
Rule 156   Other -> LEGACYCALLER
Rule 157   Other -> CONST
Rule 158   Other -> CREATOR
Rule 159   Other -> DELETER
Rule 160   Other -> DOUBLE
Rule 161   Other -> EXCEPTION
Rule 162   Other -> FALSE
Rule 163   Other -> FLOAT
Rule 164   Other -> GETTER
Rule 165   Other -> IMPLEMENTS
Rule 166   Other -> INHERIT
Rule 167   Other -> INTERFACE
Rule 168   Other -> LONG
Rule 169   Other -> MODULE
Rule 170   Other -> NULL
Rule 171   Other -> OBJECT
Rule 172   Other -> OCTET
Rule 173   Other -> OPTIONAL
Rule 174   Other -> SEQUENCE
Rule 175   Other -> MOZMAP
Rule 176   Other -> SETTER
Rule 177   Other -> SHORT
Rule 178   Other -> STATIC
Rule 179   Other -> STRINGIFIER
Rule 180   Other -> JSONIFIER
Rule 181   Other -> TRUE
Rule 182   Other -> TYPEDEF
Rule 183   Other -> UNSIGNED
Rule 184   Other -> VOID
Rule 185   OtherOrComma -> Other
Rule 186   OtherOrComma -> COMMA
Rule 187   Type -> SingleType
Rule 188   Type -> UnionType TypeSuffix
Rule 189   SingleType -> NonAnyType
Rule 190   SingleType -> ANY TypeSuffixStartingWithArray
Rule 191   UnionType -> LPAREN UnionMemberType OR UnionMemberType UnionMemberTypes RPAREN
Rule 192   UnionMemberType -> NonAnyType
Rule 193   UnionMemberTypeArrayOfAny -> ANY LBRACKET RBRACKET
Rule 194   UnionMemberType -> UnionType TypeSuffix
Rule 195   UnionMemberType -> UnionMemberTypeArrayOfAny TypeSuffix
Rule 196   UnionMemberTypes -> OR UnionMemberType UnionMemberTypes
Rule 197   UnionMemberTypes -> <empty>
Rule 198   NonAnyType -> PrimitiveOrStringType TypeSuffix
Rule 199   NonAnyType -> ARRAYBUFFER TypeSuffix
Rule 200   NonAnyType -> SHAREDARRAYBUFFER TypeSuffix
Rule 201   NonAnyType -> OBJECT TypeSuffix
Rule 202   NonAnyType -> SEQUENCE LT Type GT Null
Rule 203   NonAnyType -> PROMISE LT ReturnType GT Null
Rule 204   NonAnyType -> MOZMAP LT Type GT Null
Rule 205   NonAnyType -> ScopedName TypeSuffix
Rule 206   NonAnyType -> DATE TypeSuffix
Rule 207   ConstType -> PrimitiveOrStringType Null
Rule 208   ConstType -> IDENTIFIER Null
Rule 209   PrimitiveOrStringType -> UnsignedIntegerType
Rule 210   PrimitiveOrStringType -> BOOLEAN
Rule 211   PrimitiveOrStringType -> BYTE
Rule 212   PrimitiveOrStringType -> OCTET
Rule 213   PrimitiveOrStringType -> FLOAT
Rule 214   PrimitiveOrStringType -> UNRESTRICTED FLOAT
Rule 215   PrimitiveOrStringType -> DOUBLE
Rule 216   PrimitiveOrStringType -> UNRESTRICTED DOUBLE
Rule 217   PrimitiveOrStringType -> DOMSTRING
Rule 218   PrimitiveOrStringType -> BYTESTRING
Rule 219   PrimitiveOrStringType -> USVSTRING
Rule 220   UnsignedIntegerType -> UNSIGNED IntegerType
Rule 221   UnsignedIntegerType -> IntegerType
Rule 222   IntegerType -> SHORT
Rule 223   IntegerType -> LONG OptionalLong
Rule 224   OptionalLong -> LONG
Rule 225   OptionalLong -> <empty>
Rule 226   TypeSuffix -> LBRACKET RBRACKET TypeSuffix
Rule 227   TypeSuffix -> QUESTIONMARK TypeSuffixStartingWithArray
Rule 228   TypeSuffix -> <empty>
Rule 229   TypeSuffixStartingWithArray -> LBRACKET RBRACKET TypeSuffix
Rule 230   TypeSuffixStartingWithArray -> <empty>
Rule 231   Null -> QUESTIONMARK
Rule 232   Null -> <empty>
Rule 233   ReturnType -> Type
Rule 234   ReturnType -> VOID
Rule 235   ScopedName -> AbsoluteScopedName
Rule 236   ScopedName -> RelativeScopedName
Rule 237   AbsoluteScopedName -> SCOPE IDENTIFIER ScopedNameParts
Rule 238   RelativeScopedName -> IDENTIFIER ScopedNameParts
Rule 239   ScopedNameParts -> SCOPE IDENTIFIER ScopedNameParts
Rule 240   ScopedNameParts -> <empty>
Rule 241   ExtendedAttributeNoArgs -> IDENTIFIER
Rule 242   ExtendedAttributeArgList -> IDENTIFIER LPAREN ArgumentList RPAREN
Rule 243   ExtendedAttributeIdent -> IDENTIFIER EQUALS STRING
Rule 244   ExtendedAttributeIdent -> IDENTIFIER EQUALS IDENTIFIER
Rule 245   ExtendedAttributeNamedArgList -> IDENTIFIER EQUALS IDENTIFIER LPAREN ArgumentList RPAREN
Rule 246   ExtendedAttributeIdentList -> IDENTIFIER EQUALS LPAREN IdentifierList RPAREN
Rule 247   IdentifierList -> IDENTIFIER Identifiers
Rule 248   Identifiers -> COMMA IDENTIFIER Identifiers
Rule 249   Identifiers -> <empty>

Terminals, with rules where they appear

ANY                  : 152 190 193
ARRAYBUFFER          : 199
ATTRIBUTE            : 63 89 153
BOOLEAN              : 154 210
BYTE                 : 155 211
BYTESTRING           : 150 218
CALLBACK             : 10 90
COLON                : 17 141
COMMA                : 34 57 59 85 133 186 248
CONST                : 43 91 157
CREATOR              : 77 92 158
DATE                 : 148 206
DELETER              : 78 93 159
DICTIONARY           : 23 94
DOMSTRING            : 149 217
DOUBLE               : 160 215 216
ELLIPSIS             : 120 140
ENUM                 : 32 95
EQUALS               : 27 38 43 145 243 244 245 246
EXCEPTION            : 31 96 161
FALSE                : 50 162
FLOAT                : 163 213 214
FLOATLITERAL         : 46 136
GETTER               : 75 97 164
GT                   : 56 57 58 59 146 202 203 204
IDENTIFIER           : 14 15 16 23 26 31 32 38 41 43 81 88 114 124 137 208 237 238 239 241 242 243 244 244 245 245 246 247 248
IMPLEMENTS           : 42 98 165
INHERIT              : 61 99 166
INTEGER              : 45 135
INTERFACE            : 14 15 16 100 167
ITERABLE             : 56 57 101
JSONIFIER            : 68 111 180
LBRACE               : 14 16 23 31 32
LBRACKET             : 30 125 193 226 229
LEGACYCALLER         : 79 102 156
LONG                 : 168 223 224
LPAREN               : 38 80 191 242 245 246
LT                   : 56 57 58 59 144 202 203 204
MAPLIKE              : 59 103
MODULE               : 169
MOZMAP               : 175 204
NULL                 : 48 170
OBJECT               : 171 201
OCTET                : 172 212
OPTIONAL             : 116 173
OR                   : 191 196
OTHER                : 139
PARTIAL              : 16 104
PROMISE              : 203
QUESTIONMARK         : 147 227 231
RBRACE               : 14 16 23 31 32
RBRACKET             : 30 125 193 226 229
READONLY             : 64
REQUIRED             : 105 115 118
RPAREN               : 38 80 191 242 245 246
SCOPE                : 142 237 239
SEMICOLON            : 14 15 16 23 26 31 32 38 41 42 43 56 57 58 59 63 67 68 80 124 143
SEQUENCE             : 174 202
SERIALIZER           : 106
SETLIKE              : 58 107
SETTER               : 76 108 176
SHAREDARRAYBUFFER    : 200
SHORT                : 177 222
STATIC               : 69 109 178
STRING               : 33 36 47 138 243
STRINGIFIER          : 67 70 110 179
TRUE                 : 49 181
TYPEDEF              : 41 112 182
UNRESTRICTED         : 113 214 216
UNSIGNED             : 183 220
USVSTRING            : 151 219
VOID                 : 184 234
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

AbsoluteScopedName   : 235
Argument             : 83 85
ArgumentList         : 38 80 242 245
ArgumentName         : 87
Arguments            : 83 85
Attribute            : 51
AttributeName        : 63
AttributeOrOperationOrMaplikeOrSetlikeOrIterable : 22
AttributeRest        : 60 61 62
BooleanLiteral       : 44
CallbackOrInterface  : 3
CallbackRest         : 12
CallbackRestOrInterface : 10
Const                : 21 122
ConstType            : 43
ConstValue           : 29 43
Default              : 26 87
DefaultValue         : 27
Definition           : 1
Definitions          : 1 0
Dictionary           : 5
DictionaryMember     : 24
DictionaryMembers    : 23 24
Ellipsis             : 87
Enum                 : 7
EnumValueList        : 32
EnumValueListComma   : 33 36
EnumValueListString  : 34
Exception            : 6
ExceptionField       : 123
ExceptionMember      : 39
ExceptionMembers     : 31 39
ExtendedAttribute    : 125 133
ExtendedAttributeArgList : 128
ExtendedAttributeIdent : 129
ExtendedAttributeIdentList : 131
ExtendedAttributeList : 1 19 24 39 87
ExtendedAttributeNamedArgList : 130
ExtendedAttributeNoArgs : 127
ExtendedAttributes   : 125 133
IdentifierList       : 246
Identifiers          : 247 248
ImplementsStatement  : 9
Inheritance          : 14 23 31
IntegerType          : 220 221
Interface            : 11 13
InterfaceMember      : 19
InterfaceMembers     : 14 16 19
Iterable             : 54
Maplike              : 52
NonAnyType           : 189 192
Null                 : 202 203 204 207 208
Operation            : 55
OperationRest        : 66
Optional             : 87
OptionalIdentifier   : 80
OptionalLong         : 223
Other                : 185
OtherOrComma         : 
PartialInterface     : 4
PrimitiveOrStringType : 198 207
Qualifier            : 60 71
Qualifiers           : 66
ReadOnly             : 58 59 63
RelativeScopedName   : 236
Required             : 26
ReturnType           : 38 80 203
ScopedName           : 17 42 42 205
ScopedNameParts      : 237 238 239
Setlike              : 53
SingleType           : 187
Special              : 73
Specials             : 72 73
Type                 : 26 41 56 57 57 58 59 59 63 87 124 202 204 233
TypeSuffix           : 188 194 195 198 199 200 201 205 206 226 229
TypeSuffixStartingWithArray : 190 227
Typedef              : 8
UnionMemberType      : 191 191 196
UnionMemberTypeArrayOfAny : 195
UnionMemberTypes     : 191 196
UnionType            : 188 194
UnsignedIntegerType  : 209

Parsing method: LALR

state 0

    (0) S' -> . Definitions
    (1) Definitions -> . ExtendedAttributeList Definition Definitions
    (2) Definitions -> .
    (125) ExtendedAttributeList -> . LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
    (126) ExtendedAttributeList -> .

    $end            reduce using rule 2 (Definitions -> .)
    LBRACKET        shift and go to state 1
    CALLBACK        reduce using rule 126 (ExtendedAttributeList -> .)
    PARTIAL         reduce using rule 126 (ExtendedAttributeList -> .)
    DICTIONARY      reduce using rule 126 (ExtendedAttributeList -> .)
    EXCEPTION       reduce using rule 126 (ExtendedAttributeList -> .)
    ENUM            reduce using rule 126 (ExtendedAttributeList -> .)
    TYPEDEF         reduce using rule 126 (ExtendedAttributeList -> .)
    INTERFACE       reduce using rule 126 (ExtendedAttributeList -> .)
    SCOPE           reduce using rule 126 (ExtendedAttributeList -> .)
    IDENTIFIER      reduce using rule 126 (ExtendedAttributeList -> .)

    Definitions                    shift and go to state 3
    ExtendedAttributeList          shift and go to state 2

state 1

    (125) ExtendedAttributeList -> LBRACKET . ExtendedAttribute ExtendedAttributes RBRACKET
    (127) ExtendedAttribute -> . ExtendedAttributeNoArgs
    (128) ExtendedAttribute -> . ExtendedAttributeArgList
    (129) ExtendedAttribute -> . ExtendedAttributeIdent
    (130) ExtendedAttribute -> . ExtendedAttributeNamedArgList
    (131) ExtendedAttribute -> . ExtendedAttributeIdentList
    (132) ExtendedAttribute -> .
    (241) ExtendedAttributeNoArgs -> . IDENTIFIER
    (242) ExtendedAttributeArgList -> . IDENTIFIER LPAREN ArgumentList RPAREN
    (243) ExtendedAttributeIdent -> . IDENTIFIER EQUALS STRING
    (244) ExtendedAttributeIdent -> . IDENTIFIER EQUALS IDENTIFIER
    (245) ExtendedAttributeNamedArgList -> . IDENTIFIER EQUALS IDENTIFIER LPAREN ArgumentList RPAREN
    (246) ExtendedAttributeIdentList -> . IDENTIFIER EQUALS LPAREN IdentifierList RPAREN

    COMMA           reduce using rule 132 (ExtendedAttribute -> .)
    RBRACKET        reduce using rule 132 (ExtendedAttribute -> .)
    IDENTIFIER      shift and go to state 10

    ExtendedAttribute              shift and go to state 4
    ExtendedAttributeNamedArgList  shift and go to state 5
    ExtendedAttributeArgList       shift and go to state 6
    ExtendedAttributeIdentList     shift and go to state 7
    ExtendedAttributeIdent         shift and go to state 8
    ExtendedAttributeNoArgs        shift and go to state 9

state 2

    (1) Definitions -> ExtendedAttributeList . Definition Definitions
    (3) Definition -> . CallbackOrInterface
    (4) Definition -> . PartialInterface
    (5) Definition -> . Dictionary
    (6) Definition -> . Exception
    (7) Definition -> . Enum
    (8) Definition -> . Typedef
    (9) Definition -> . ImplementsStatement
    (10) CallbackOrInterface -> . CALLBACK CallbackRestOrInterface
    (11) CallbackOrInterface -> . Interface
    (16) PartialInterface -> . PARTIAL INTERFACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON
    (23) Dictionary -> . DICTIONARY IDENTIFIER Inheritance LBRACE DictionaryMembers RBRACE SEMICOLON
    (31) Exception -> . EXCEPTION IDENTIFIER Inheritance LBRACE ExceptionMembers RBRACE SEMICOLON
    (32) Enum -> . ENUM IDENTIFIER LBRACE EnumValueList RBRACE SEMICOLON
    (41) Typedef -> . TYPEDEF Type IDENTIFIER SEMICOLON
    (42) ImplementsStatement -> . ScopedName IMPLEMENTS ScopedName SEMICOLON
    (14) Interface -> . INTERFACE IDENTIFIER Inheritance LBRACE InterfaceMembers RBRACE SEMICOLON
    (15) Interface -> . INTERFACE IDENTIFIER SEMICOLON
    (235) ScopedName -> . AbsoluteScopedName
    (236) ScopedName -> . RelativeScopedName
    (237) AbsoluteScopedName -> . SCOPE IDENTIFIER ScopedNameParts
    (238) RelativeScopedName -> . IDENTIFIER ScopedNameParts

    CALLBACK        shift and go to state 29
    PARTIAL         shift and go to state 27
    DICTIONARY      shift and go to state 21
    EXCEPTION       shift and go to state 23
    ENUM            shift and go to state 22
    TYPEDEF         shift and go to state 26
    INTERFACE       shift and go to state 30
    SCOPE           shift and go to state 13
    IDENTIFIER      shift and go to state 18

    Typedef                        shift and go to state 11
    CallbackOrInterface            shift and go to state 12
    Dictionary                     shift and go to state 14
    AbsoluteScopedName             shift and go to state 15
    Enum                           shift and go to state 16
    Interface                      shift and go to state 17
    Definition                     shift and go to state 19
    Exception                      shift and go to state 20
    PartialInterface               shift and go to state 24
    ImplementsStatement            shift and go to state 25
    RelativeScopedName             shift and go to state 28
    ScopedName                     shift and go to state 31

state 3

    (0) S' -> Definitions .



state 4

    (125) ExtendedAttributeList -> LBRACKET ExtendedAttribute . ExtendedAttributes RBRACKET
    (133) ExtendedAttributes -> . COMMA ExtendedAttribute ExtendedAttributes
    (134) ExtendedAttributes -> .

    COMMA           shift and go to state 33
    RBRACKET        reduce using rule 134 (ExtendedAttributes -> .)

    ExtendedAttributes             shift and go to state 32

state 5

    (130) ExtendedAttribute -> ExtendedAttributeNamedArgList .

    COMMA           reduce using rule 130 (ExtendedAttribute -> ExtendedAttributeNamedArgList .)
    RBRACKET        reduce using rule 130 (ExtendedAttribute -> ExtendedAttributeNamedArgList .)


state 6

    (128) ExtendedAttribute -> ExtendedAttributeArgList .

    COMMA           reduce using rule 128 (ExtendedAttribute -> ExtendedAttributeArgList .)
    RBRACKET        reduce using rule 128 (ExtendedAttribute -> ExtendedAttributeArgList .)


state 7

    (131) ExtendedAttribute -> ExtendedAttributeIdentList .

    COMMA           reduce using rule 131 (ExtendedAttribute -> ExtendedAttributeIdentList .)
    RBRACKET        reduce using rule 131 (ExtendedAttribute -> ExtendedAttributeIdentList .)


state 8

    (129) ExtendedAttribute -> ExtendedAttributeIdent .

    COMMA           reduce using rule 129 (ExtendedAttribute -> ExtendedAttributeIdent .)
    RBRACKET        reduce using rule 129 (ExtendedAttribute -> ExtendedAttributeIdent .)


state 9

    (127) ExtendedAttribute -> ExtendedAttributeNoArgs .

    COMMA           reduce using rule 127 (ExtendedAttribute -> ExtendedAttributeNoArgs .)
    RBRACKET        reduce using rule 127 (ExtendedAttribute -> ExtendedAttributeNoArgs .)


state 10

    (241) ExtendedAttributeNoArgs -> IDENTIFIER .
    (242) ExtendedAttributeArgList -> IDENTIFIER . LPAREN ArgumentList RPAREN
    (243) ExtendedAttributeIdent -> IDENTIFIER . EQUALS STRING
    (244) ExtendedAttributeIdent -> IDENTIFIER . EQUALS IDENTIFIER
    (245) ExtendedAttributeNamedArgList -> IDENTIFIER . EQUALS IDENTIFIER LPAREN ArgumentList RPAREN
    (246) ExtendedAttributeIdentList -> IDENTIFIER . EQUALS LPAREN IdentifierList RPAREN

    COMMA           reduce using rule 241 (ExtendedAttributeNoArgs -> IDENTIFIER .)
    RBRACKET        reduce using rule 241 (ExtendedAttributeNoArgs -> IDENTIFIER .)
    LPAREN          shift and go to state 35
    EQUALS          shift and go to state 34


state 11

    (8) Definition -> Typedef .

    LBRACKET        reduce using rule 8 (Definition -> Typedef .)
    CALLBACK        reduce using rule 8 (Definition -> Typedef .)
    PARTIAL         reduce using rule 8 (Definition -> Typedef .)
    DICTIONARY      reduce using rule 8 (Definition -> Typedef .)
    EXCEPTION       reduce using rule 8 (Definition -> Typedef .)
    ENUM            reduce using rule 8 (Definition -> Typedef .)
    TYPEDEF         reduce using rule 8 (Definition -> Typedef .)
    INTERFACE       reduce using rule 8 (Definition -> Typedef .)
    SCOPE           reduce using rule 8 (Definition -> Typedef .)
    IDENTIFIER      reduce using rule 8 (Definition -> Typedef .)
    $end            reduce using rule 8 (Definition -> Typedef .)


state 12

    (3) Definition -> CallbackOrInterface .

    LBRACKET        reduce using rule 3 (Definition -> CallbackOrInterface .)
    CALLBACK        reduce using rule 3 (Definition -> CallbackOrInterface .)
    PARTIAL         reduce using rule 3 (Definition -> CallbackOrInterface .)
    DICTIONARY      reduce using rule 3 (Definition -> CallbackOrInterface .)
    EXCEPTION       reduce using rule 3 (Definition -> CallbackOrInterface .)
    ENUM            reduce using rule 3 (Definition -> CallbackOrInterface .)
    TYPEDEF         reduce using rule 3 (Definition -> CallbackOrInterface .)
    INTERFACE       reduce using rule 3 (Definition -> CallbackOrInterface .)
    SCOPE           reduce using rule 3 (Definition -> CallbackOrInterface .)
    IDENTIFIER      reduce using rule 3 (Definition -> CallbackOrInterface .)
    $end            reduce using rule 3 (Definition -> CallbackOrInterface .)


state 13

    (237) AbsoluteScopedName -> SCOPE . IDENTIFIER ScopedNameParts

    IDENTIFIER      shift and go to state 36


state 14

    (5) Definition -> Dictionary .

    LBRACKET        reduce using rule 5 (Definition -> Dictionary .)
    CALLBACK        reduce using rule 5 (Definition -> Dictionary .)
    PARTIAL         reduce using rule 5 (Definition -> Dictionary .)
    DICTIONARY      reduce using rule 5 (Definition -> Dictionary .)
    EXCEPTION       reduce using rule 5 (Definition -> Dictionary .)
    ENUM            reduce using rule 5 (Definition -> Dictionary .)
    TYPEDEF         reduce using rule 5 (Definition -> Dictionary .)
    INTERFACE       reduce using rule 5 (Definition -> Dictionary .)
    SCOPE           reduce using rule 5 (Definition -> Dictionary .)
    IDENTIFIER      reduce using rule 5 (Definition -> Dictionary .)
    $end            reduce using rule 5 (Definition -> Dictionary .)


state 15

    (235) ScopedName -> AbsoluteScopedName .

    LBRACE          reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    LBRACKET        reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    QUESTIONMARK    reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    IDENTIFIER      reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    LPAREN          reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    IMPLEMENTS      reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    OR              reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    GT              reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    RPAREN          reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    SEMICOLON       reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    REQUIRED        reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    ELLIPSIS        reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    ATTRIBUTE       reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    CALLBACK        reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    CONST           reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    CREATOR         reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    DELETER         reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    DICTIONARY      reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    ENUM            reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    EXCEPTION       reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    GETTER          reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    INHERIT         reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    INTERFACE       reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    ITERABLE        reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    LEGACYCALLER    reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    MAPLIKE         reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    PARTIAL         reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    SERIALIZER      reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    SETLIKE         reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    SETTER          reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    STATIC          reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    STRINGIFIER     reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    JSONIFIER       reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    TYPEDEF         reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    UNRESTRICTED    reduce using rule 235 (ScopedName -> AbsoluteScopedName .)
    COMMA           reduce using rule 235 (ScopedName -> AbsoluteScopedName .)


state 16

    (7) Definition -> Enum .

    LBRACKET        reduce using rule 7 (Definition -> Enum .)
    CALLBACK        reduce using rule 7 (Definition -> Enum .)
    PARTIAL         reduce using rule 7 (Definition -> Enum .)
    DICTIONARY      reduce using rule 7 (Definition -> Enum .)
    EXCEPTION       reduce using rule 7 (Definition -> Enum .)
    ENUM            reduce using rule 7 (Definition -> Enum .)
    TYPEDEF         reduce using rule 7 (Definition -> Enum .)
    INTERFACE       reduce using rule 7 (Definition -> Enum .)
    SCOPE           reduce using rule 7 (Definition -> Enum .)
    IDENTIFIER      reduce using rule 7 (Definition -> Enum .)
    $end            reduce using rule 7 (Definition -> Enum .)


state 17

    (11) CallbackOrInterface -> Interface .
